add semantic-spatial training

--- a/cliport/cfg/data.yaml
+++ b/cliport/cfg/data.yaml
@@ -7,7 +7,7 @@ hydra:
   run:
     dir: ${root_dir}
 
-data_dir: ${root_dir}/data  # where to store dataset
+data_dir: ${root_dir}/pretrain_data  # where to store dataset
 assets_root: ${root_dir}/cliport/environments/assets/
 disp: False  # visualize PyBullet
 shared_memory: False
